tests/reference/asr-program_variable-066cc64.stderr
semantic error: Symbol 'foo' must be a variable or a procedure
 --> tests/errors/program_variable.f90:3:7
  |
3 | bar = foo
  |       ^^^ cannot use a 'Program' as a variable
  |
1 |    program foo
  |    ~~~~~~~~~~~...
...
  |
4 |    end program
  | ...~~~~~~~~~~~ 'foo' declared as a 'Program' here
